--- a/src/main/resources/templates/tving/home.html
+++ b/src/main/resources/templates/tving/home.html
@@ -2,33 +2,37 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Tving 홈페이지</title>
-    <link rel="stylesheet" href="../../static/CSS/home.css">
+    <title>Tving홈페이지</title>
+    <link rel="stylesheet" href="../../../../../../../../Documents/카카오톡%20받은%20파일/tving/src/main/resources/static/css/home.css">
 </head>
 <body>
-<header class="logo">
-    <div id="main-logo-con">
+<header>
+    <div id="title-con">
         <a href="/">
-            <img src="../../static/images/tving-new-logo-pc.svg" alt="TVING">
+            <img src="../../../../../../../../Documents/카카오톡%20받은%20파일/tving/src/main/resources/static/tving-logo.svg" alt="TVING">
         </a>
     </div>
 </header>
-    <main>
-        <section id="main-view">
-            <div class="message-con">
-                <p>티빙 오리지널 콘텐츠,</p>
-                <p>방송, 영화, 해외시리즈까지!</p>
-                <p>재미를 플레이해보세요.</p>
+<main>
+    <section>
+        <div id="main-message">
+            <div id="message-con">
+                <p class="message1">티빙 오리지널 콘텐츠,</p>
+                <p class="message1">방송, 영화, 해외시리즈까지!</p>
+                <p class="message1">재미를 플레이해보세요.</p>
                 <p class="message2">간편하게 가입하고, 원하실 때 해지할 수 있어요.</p>
+                <div id="btn-con">
+                    <button type="button" >
+                        <img src="../../static/images/img_tving-symbol.svg" width="20%" alt="icon">
+                        <p>새로워진 티빙을 만나보세요!</p>
+                    </button>
+                </div>
             </div>
-            <div id="start-button">
-                <button type="button" class="login-button">
-                    <img src="../../static/images/img_tving-symbol.svg">
-                    <p>새로워진 티빙을 만나보세요!</p>
-                </button>
-            </div>
-        </section>
+        </div>
+    </section>
+</main>
+<footer>
 
-    </main>
+</footer>
 </body>
 </html>
