--- a/src/main/resources/templates/tving/login.html
+++ b/src/main/resources/templates/tving/login.html
@@ -2,68 +2,98 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>로그인 창</title>
-    <link rel="stylesheet" href="../../static/CSS/login.css">
+    <title>로그인</title>
+    <link rel="stylesheet" href="../../../../../../../../Documents/카카오톡%20받은%20파일/tving/src/main/resources/static/css/login.css">
 </head>
 <body>
-<header class="logo">
-    <div id="main-logo-con">
+<div class="login_Allcontainer">
+<header>
+    <div id="title-con">
         <a href="/">
-            <img src="../../static/images/tving-new-logo-pc.svg" alt="TVING">
+            <img src="../../../../../../../../Documents/카카오톡%20받은%20파일/tving/src/main/resources/static/tving-logo.svg" alt="TVING">
         </a>
     </div>
 </header>
-
-    <main>
-        <section id="login-title">
-            <p>반가워요!</p>
-            <p>계정을 선택해주세요.</p>
-        </section>
-        
-        <section id="login-select">
-            <div id="tving-btn" class="login-btn">
-                <img src="/static/images/img_tving-symbol.svg" alt="티빙">
-                <span>TVING ID로 시작하기</span>
+<main>
+    <section>
+        <div id="login-con">
+            <div id="login-message">
+                <p>반가워요!</p>
+                <p>계정을 선택해주세요.</p>
             </div>
-            <div id="naver-btn" class="login-btn>
-                <img src="" alt="네이버">
-                <span>네이버 ID로 시작하기</span>
+            <div id="select-login">
+                <div id="btn-con">
+                    <div id="tving-login" class="login-btn">
+                        <button type="button">
+                            <img src="../../static/images/icon-id-tving.svg" width="20rem" alt="tving-icon">
+                            <p>TVING ID로 시작하기</p>
+                        </button>
+                    </div>
+                    <div id="naver-login" class="login-btn">
+                        <button type="button">
+                            <img src="../../static/images/icon-naver.svg" width="20rem" alt="naver-icon">
+                            <p>네이버로 시작하기</p>
+                        </button>
+                    </div>
+                    <div id="kako-login" class="login-btn">
+                        <button type="button">
+                            <img src="../../static/images/icon-id-kakao.svg" width="20rem" alt="kakao-icon">
+                            <p>카카오로 시작하기</p>
+                        </button>
+                    </div>
+                    <div id="cj-login" class="login-btn">
+                        <button type="button">
+                            <img src="../../static/images/icon-id-cj.png" width="20rem" alt="cj-icon">
+                            <p>CJ ONE으로 시작하기</p>
+                        </button>
+                    </div>
+                </div>
             </div>
-            <div id="kakao-btn" class="login-btn>
-                <img src="" alt="카카오">
-                <span>카카오로 시작하기</span>
+            <div id="find-id">
+                <p>아이디를 잊으셨나요?</p>
+                <a href="#">아이디 찾기</a>
             </div>
-        </section>
-
-        <section>
-
-        </section>
-    </main>
+        </div>
+    </section>
+</main>
+<hr>
 <footer>
-    <hr>
-    <div id="footer-menu">
-        <h4>고객센터</h4>
-        <h4>이용약관</h4>
-        <h4>개인정보처리방침</h4>
-        <h4>청소년보호정책</h4>
-        <h4>법적고지</h4>
-    </div>
-    <p>
-        대표이사 : YANG JIEUL사업자정보확인사업자등록번호 : 188-88-01893통신판매신고번호 : 2020-서울마포-3641호
-
-        사업장 : 서울특별시 마포구 상암산로 34, DMC디지털큐브 15층(상암동)호스팅사업자 : 씨제이올리브네트웍스(주)
-
-        고객문의 바로가기 대표메일 : tving@cj.net고객센터 : 1670-1525(평일 09시~18시)
-
-        ENM 시청자 상담실 (편성 문의 및 시청자 의견) : 080-080-0780Mnet 고객센터(방송편성문의) : 1855-1631
-    </p>
-    <div>
-        <a href="">유튜브</a>
-        <a href="">인스타그램</a>
-        <a href="">트위터</a>
-        <a href="">페이스북</a>
-    </div>
-    <p>Copyright © 주식회사 티빙 All right reserved.</p>
+    <section>
+        <nav id="footer-menu">
+            <a href="#">고객센터</a>
+            <a href="#">이용약관</a>
+            <a href="#">개인정보처리방침</a>
+            <a href="#">청소년보호정책</a>
+            <a href="#">법적고지</a>
+        </nav>
+        <div id="">
+            <p>
+                <span>대표이사 : YANG JIEUL</span>
+                <span><a href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=1888801893&apv_perm_no=">사업자정보확인</a></span>
+                <span>사업자등록번호 : 188-88-01893</span>
+                <span>통신판매신고번호 : 2020-서울마포-3641호</span>
+            </p>
+            <p>
+                <span>
+                   사업장 : 서울특별시 마포구 상암산로 34, DMC디지털큐브 15층(상암동)
+                </span>
+                <span>호스팅사업자 : 씨제이올리브네트웍스(주)</span>
+            </p>
+            <p>
+                <span><a href="#">고객문의 바로가기</a></span>
+                <span>대표메일 : tving@cj.net</span>
+                <span>고객센터 : 1670-1525(평일 09시~18시)</span>
+            </p>
+            <p>
+                <span>ENM 시청자 상담실 (편성 문의 및 시청자 의견) : 080-080-0780</span>
+                <span>Mnet 고객센터(방송편성문의) : 1855-1631</span>
+            </p>
+        </div>
+        <div id="link"></div>
+        <p>Copyright © 주식회사 티빙 All right reserved.</p>
+    </section>
 </footer>
+</div>
+
 </body>
 </html>
