--- a/src/main/resources/templates/tving/login-main.html
+++ b/src/main/resources/templates/tving/login-main.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="../../static/CSS/login-main.css">
 </head>
 <body>
-    <header class="logo">
-        <div id="main-logo-con">
-            <a href="/">
-                <img src="../../static/images/tving-new-logo-pc.svg" alt="TVING">
-            </a>
-        </div>
-    </header>
+<header>
+    <div id="title-con">
+        <a href="/">
+            <img src="../../static/images/tving-new-logo-pc.svg" alt="TVING">
+        </a>
+    </div>
+</header>
     <main>
         <section id="login">
             <div id="login-con">
