--- a/src/main/resources/templates/tving/login.html
+++ b/src/main/resources/templates/tving/login.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>로그인</title>
-    <link rel="stylesheet" href="../../../../../../../../Documents/카카오톡%20받은%20파일/tving/src/main/resources/static/css/login.css">
+    <link rel="stylesheet" href="../../static/CSS/login.css">
 </head>
 <body>
 <div class="login_Allcontainer">
 <header>
     <div id="title-con">
         <a href="/">
-            <img src="../../../../../../../../Documents/카카오톡%20받은%20파일/tving/src/main/resources/static/tving-logo.svg" alt="TVING">
+            <img src="../../static/images/tving-new-logo-pc.svg" alt="TVING">
         </a>
     </div>
 </header>
