--- a/src/main/resources/templates/tving/movie-page.html
+++ b/src/main/resources/templates/tving/movie-page.html
@@ -7,94 +7,147 @@
     <script src="https://kit.fontawesome.com/98fb4054a6.js" crossorigin="anonymous"></script>
 </head>
 <body>
+<div id="allCon">
     <header>
-        <div>
-            <img src="../../static/images/tving-new-logo-pc.svg" alt="">
+        <div id="title-con">
+            <div class="menu-icon">
+                <a href="/" id="tving">
+                    <img src="../../static/images/tving-new-logo-pc.svg" alt="TVING">
+                </a>
+            </div>
+            <div class="menu-icon">
+                <a href="#" id="live">
+                    <img src="../../static/images/icon_menu_live.svg" alt="실시간아이콘">
+                    <span>실시간</span>
+                </a>
+            </div>
+            <div class="menu-icon">
+                <a href="#" id="program">TV프로그램</a>
+            </div>
+            <div class="menu-icon">
+                <a href="#" id="paramount">
+                    <img src="../../static/images/menu_paramount.svg" alt="">
+                </a>
+            </div>
         </div>
     </header>
-<main>
-    <section id="sec1">
-        <div id="movie-info-con" class="info-con">
-            <div id="con1">
-                <div id="con1-A">
-                    <div id="movie-logo">
-                        <img src="../../static/기생충_logo.webp" alt="기생충-로고">
+    <main>
+        <section id="sec1">
+            <div id="movie-info-con" class="info-con">
+                <div id="con1">
+                    <div id="con1-A">
+                        <div id="movie-logo">
+                            <img src="../../static/images/기생충_logo.webp" alt="기생충-로고">
+                        </div>
+                        <div id="movie-info-tag">
+                            <img src="../../static/images/tag_15.svg" alt="">
+    <!--                        <div class="tag tag-age"></div>-->
+                            <div class="tag">2019</div>
+                            <div class="tag">드라마</div>
+                            <div class="tag">132분</div>
+                            <div class="tag">DRM</div>
+                        </div>
+                        <div id="sub-ticket">
+                            <button type="button">
+                                <span>이용권 구독하기</span>
+                            </button>
+                        </div>
                     </div>
-                    <div id="movie-info-tag">
-                        <img src="../../static/images/tag_15.svg" alt="">
-<!--                        <div class="tag tag-age"></div>-->
-                        <div class="tag">2019</div>
-                        <div class="tag">드라마</div>
-                        <div class="tag">132분</div>
-                        <div class="tag">DRM</div>
-                    </div>
-                    <div id="sub-ticket">
-                        <button type="button">
-                            <span>이용권 구독하기</span>
-                        </button>
+                    <div id="con1-B">
+                        <div id="movie-link">
+                            <button id="choose-btn">
+                                <i class="fa-regular fa-heart fa-2x"></i>
+                                <span>찜</span>
+                            </button>
+                            <button id="link-movie">
+                                <i class="fa-solid fa-arrow-up-from-bracket fa-2x"></i>
+                                <span>공유</span>
+                            </button>
+                        </div>
+
                     </div>
                 </div>
-                <div id="con1-B">
-                    <div id="movie-link">
-                        <button id="choose-btn">
-                            <i class="fa-regular fa-heart"></i>
-                            <span>찜</span>
-                        </button>
-                        <button id="link-movie">
-                            <i class="fa-solid fa-arrow-up-from-bracket"></i>
-                            <span>공유</span>
-                        </button>
+                <div id="movie-info-mesg">
+                    <div id="movie-info">
+                        <div id="direc">
+                            <div>크리에이터</div>
+                            <div id="director">봉준호</div>
+                        </div>
+                        <div id="movie-cast">
+                            <div>출연</div>
+                            <div id="caster">송강호,이선균,조여정,최우식,박소담,장해진,이정은</div>
+                        </div>
                     </div>
 
+                    <div id="comment">
+                      <p>“폐 끼치고 싶진 않았어요”</p>
+    <!--                <div id="summary">-->
+    <!--                    전원백수로 살 길 막막하지만 사이는 좋은 기택(송강호) 가족.-->
+    <!--                    장남 기우(최우식)에게 명문대생 친구가 연결시켜 준 고액 과외 자리는-->
+    <!--                    모처럼 싹튼 고정수입의 희망이다.-->
+    <!--                    온 가족의 도움과 기대 속에 박사장(이선균) 집으로 향하는 기우.-->
+    <!--                    글로벌 IT기업 CEO인 박사장의 저택에 도착하자-->
+    <!--                    젊고 아름다운 사모님 연교(조여정)가 기우를 맞이한다.-->
+
+    <!--                    그러나 이렇게 시작된 두 가족의 만남 뒤로, 걷잡을 수 없는 사건이 기다리고 있었으니...-->
+    <!--                </div>-->
+                    </div>
                 </div>
             </div>
-            <div id="movie-info-mesg">
-                <div id="movie-info">
-                    <div id="direc">
-                        <div>크리에이터</div>
-                        <div id="director">봉준호</div>
-                    </div>
-                    <div id="movie-cast">
-                        <div>출연</div>
-                        <div id="caster">송강호,이선균,조여정,최우식,박소담,장해진,이정은</div>
-                    </div>
-                </div>
-
-                <div id="comment">
-                  <p>“폐 끼치고 싶진 않았어요”</p>
-<!--                <div id="summary">-->
-<!--                    전원백수로 살 길 막막하지만 사이는 좋은 기택(송강호) 가족.-->
-<!--                    장남 기우(최우식)에게 명문대생 친구가 연결시켜 준 고액 과외 자리는-->
-<!--                    모처럼 싹튼 고정수입의 희망이다.-->
-<!--                    온 가족의 도움과 기대 속에 박사장(이선균) 집으로 향하는 기우.-->
-<!--                    글로벌 IT기업 CEO인 박사장의 저택에 도착하자-->
-<!--                    젊고 아름다운 사모님 연교(조여정)가 기우를 맞이한다.-->
-
-<!--                    그러나 이렇게 시작된 두 가족의 만남 뒤로, 걷잡을 수 없는 사건이 기다리고 있었으니...-->
-<!--                </div>-->
+            <div id="movie-img-con" class="info-con">
+                <div id="movie-img">
+                    <img src="../../static/images/기생충_poster.webp" alt="기생충메인포스터">
                 </div>
             </div>
-        </div>
-        <div id="movie-img-con" class="info-con">
-            <div id="movie-img">
-                <img src="../../static/images/기생충_poster.webp" alt="기생충메인포스터">
-            </div>
-        </div>
-<!--        <div id="more-summary">-->
-<!--            <button type="button">더보기</button>-->
-<!--            <button type="button">닫기</button>-->
-<!--        </div>-->
-    </section>
-    <section id="sec2">
-        <div id="similar-movie" class="slide-view"></div>
-        <div id="family-movie" class="slide-view"></div>
-        <div id="drama-movie" class="slide-view"></div>
-        <div id="winning-movie" class="slide-view"></div>
-        <div id="monthly-movie" class="slide-view"></div>
-    </section>
-</main>
-<footer>
-
-</footer>
+    <!--        <div id="more-summary">-->
+    <!--            <button type="button">더보기</button>-->
+    <!--            <button type="button">닫기</button>-->
+    <!--        </div>-->
+        </section>
+        <section id="sec2">
+            <div id="similar-movie" class="slide-view"></div>
+            <div id="family-movie" class="slide-view"></div>
+            <div id="drama-movie" class="slide-view"></div>
+            <div id="winning-movie" class="slide-view"></div>
+            <div id="monthly-movie" class="slide-view"></div>
+        </section>
+    </main>
+    <footer>
+<!--        <section>-->
+<!--            <nav id="footer-menu">-->
+<!--                <a href="#">고객센터</a>-->
+<!--                <a href="#">이용약관</a>-->
+<!--                <a href="#">개인정보처리방침</a>-->
+<!--                <a href="#">청소년보호정책</a>-->
+<!--                <a href="#">법적고지</a>-->
+<!--            </nav>-->
+<!--            <div id="">-->
+<!--                <p>-->
+<!--                    <span>대표이사 : YANG JIEUL</span>-->
+<!--                    <span><a href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=1888801893&apv_perm_no=">사업자정보확인</a></span>-->
+<!--                    <span>사업자등록번호 : 188-88-01893</span>-->
+<!--                    <span>통신판매신고번호 : 2020-서울마포-3641호</span>-->
+<!--                </p>-->
+<!--                <p>-->
+<!--                <span>-->
+<!--                   사업장 : 서울특별시 마포구 상암산로 34, DMC디지털큐브 15층(상암동)-->
+<!--                </span>-->
+<!--                    <span>호스팅사업자 : 씨제이올리브네트웍스(주)</span>-->
+<!--                </p>-->
+<!--                <p>-->
+<!--                    <span><a href="#">고객문의 바로가기</a></span>-->
+<!--                    <span>대표메일 : tving@cj.net</span>-->
+<!--                    <span>고객센터 : 1670-1525(평일 09시~18시)</span>-->
+<!--                </p>-->
+<!--                <p>-->
+<!--                    <span>ENM 시청자 상담실 (편성 문의 및 시청자 의견) : 080-080-0780</span>-->
+<!--                    <span>Mnet 고객센터(방송편성문의) : 1855-1631</span>-->
+<!--                </p>-->
+<!--            </div>-->
+<!--            <div id="link"></div>-->
+<!--            <p>Copyright © 주식회사 티빙 All right reserved.</p>-->
+<!--        </section>-->
+    </footer>
+</div>
 </body>
 </html>
