--- a/src/main/resources/templates/tving/onboarding.html
+++ b/src/main/resources/templates/tving/onboarding.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Tving홈페이지</title>
-    <link rel="stylesheet" href="../../../../../../../../Documents/카카오톡%20받은%20파일/tving/src/main/resources/static/css/home.css">
+    <link rel="stylesheet" href="../../static/CSS/onboarding.css">
 </head>
 <body>
 <header>
     <div id="title-con">
         <a href="/">
-            <img src="../../../../../../../../Documents/카카오톡%20받은%20파일/tving/src/main/resources/static/tving-logo.svg" alt="TVING">
+            <img src="../../static/images/tving-new-logo-pc.svg" alt="TVING">
         </a>
     </div>
 </header>
