--- a/src/main/resources/static/CSS/register/tving.css
+++ b/src/main/resources/static/CSS/register/tving.css
@@ -11,6 +11,9 @@ body {
     height: 100%;
     background-color: #000;
 }
+section {
+    display: flex;
+}
 
 #title-con {
     padding: 1rem 2.3em;
@@ -22,18 +25,19 @@ body {
     margin: 4.167rem auto 0;
     max-width: 41.667rem;
     /*align-items: center;*/
-    text-align: center;
+    /*text-align: center;*/
 }
 #register {
     margin: 0 -4rem 3rem;
+    text-align: center;
 }
 .message1{
+
     position: relative;
     color: #fff;
     font-size: 2rem;
 }
 .message2 {
-    padding: 0 2rem;
     margin-top: 1rem;
     box-sizing: border-box;
     color: #888888;
@@ -43,16 +47,13 @@ body {
 form{
     display: block;
     margin-top: 0em;
-    padding: 0 5rem;
 }
 .register-input {
-    /*border-color: #ababab;*/
-
     box-sizing: border-box;
-    margin: 3.4px 0;
+    margin: 1.2vw 0;
     text-indent: 1.333rem;
     width: 100%;
-    height: 3.2rem;
+    height: 4rem;
     /*입력 글씨*/
     color: #fff;
     font-size: 1rem;
@@ -61,5 +62,4 @@ form{
     background-color: #212121;
     border: 1px solid #212121;
     border-radius: 4px;
-
 }
