--- a/src/main/resources/templates/tving/register/tving.html
+++ b/src/main/resources/templates/tving/register/tving.html
@@ -41,8 +41,8 @@
                 <div id="term-con">
                     <ul id="all-agree">
                         <li>
-                            <label>
-                                <img src="../../../static/images/agree-icon.png" alt="">
+                            <label style="display: flex" >
+                                <img src="../../../static/images/agree-icon.png" class="agreeImg" alt="모두 동의함 버튼">
                                 <h5>모두 동의합니다.</h5>
                             </label>
                         </li>
