--- a/src/main/resources/templates/tving/user/login.html
+++ b/src/main/resources/templates/tving/user/login.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>TVINGID로그인</title>
-    <link rel="stylesheet" href="../../static/CSS/login-main.css">
+    <link rel="stylesheet" href="../../../static/CSS/login-main.css">
 </head>
 <body>
 <header>
     <div id="title-con">
-        <a href="/">
-            <img src="../../static/images/tving-new-logo-pc.svg" alt="TVING">
+        <a href="/static">
+            <img src="../../../static/images/tving-new-logo-pc.svg" alt="TVING">
         </a>
     </div>
 </header>
