--- a/src/main/resources/templates/user/myPage/main.html
+++ b/src/main/resources/templates/user/myPage/main.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>마이티빙</title>
-    <link rel="stylesheet" href="../../static/CSS/mypage.css">
     <script src="https://kit.fontawesome.com/98fb4054a6.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../../../static/CSS/user/mypage/main.css">
 </head>
 <body>
     <header>
         <div id="title-con">
             <div class="menu-icon">
-                <a href="/" id="tving">
-                    <img src="../../static/images/tving-new-logo-pc.svg" alt="TVING">
+                <a href="/static" id="tving">
+                    <img src="../../../static/images/tving-new-logo-pc.svg" alt="TVING">
                 </a>
             </div>
             <div class="menu-icon">
                 <a href="#" id="live">
-                    <img src="../../static/images/icon_menu_live.svg" alt="실시간아이콘">
+                    <img src="../../../static/images/icon_menu_live.svg" alt="실시간아이콘">
                     <span>실시간</span>
                 </a>
             </div>
@@ -28,7 +28,7 @@
             </div>
             <div class="menu-icon">
                 <a href="#" id="paramount">
-                    <img src="../../static/images/menu_paramount.svg" alt="">
+                    <img src="../../../static/images/menu_paramount.svg" alt="">
                 </a>
             </div>
         </div>
@@ -39,7 +39,7 @@
                 <div id="user-profil-con">
                     <div id="user-img">
                         <a href="" class="image">
-                            <img src="../../static/images/profil-img01.webp" alt="프로필사진">
+                            <img src="../../../static/images/profil-img01.webp" alt="프로필사진">
                         </a>
                     </div>
                         <div id="user-profil1">
@@ -96,8 +96,8 @@
                         <p>
                             이용권을 구독하고
                         <div id="channel-icon">
-                            <img src="../../static/images/icon_tvn.png" alt="tvn">
-                            <img src="../../static/images/icon_jtbc.png" alt="jtbc">
+                            <img src="../../../static/images/icon_tvn.png" alt="tvn">
+                            <img src="../../../static/images/icon_jtbc.png" alt="jtbc">
                         </div>
                         등 인기 TV프로그램과 다야한 영화를 자유롭게 시청하세요!
                         </p>
@@ -105,13 +105,14 @@
                     <div>
                         <button>
                             <a href="">이용권 구독하기
-                            <img src="../../static/images/btn-arrow-right.svg"></a>
+                            <img src="../../../static/images/btn-arrow-right.svg"></a>
                         </button>
                     </div>
                 </div>
                 <div></div>
             </section>
-            <section>
+
+            <section id="history-list">
                 <div id="myPage-menu">
                     <div>
                         <a href="">
@@ -150,6 +151,9 @@
                         <a href="">영화</a>
                     </div>
                 </div>
+            </section>
+
+            <section id="history-view">
                 <div id="result-box-con">
                     <div id="view">
                         <div id="exclam-icon">
