--- a/src/main/resources/static/CSS/main/program.css
+++ b/src/main/resources/static/CSS/main/program.css
@@ -10,7 +10,7 @@ body {
     position: relative;
     background-color: #000;
     color: #fff;
-    background-image: url(../images/기생충_poster.webp);
+    background-image: url(../../images/기생충_poster.webp);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -55,7 +55,7 @@ main {
     display: flex;
     width: 100%;
     height: 500px;
-    background-image:url(../images/moweb-img-gradation-0228.png);
+    background-image:url(../../images/moweb-img-gradation-0228.png);
     background-size: cover;
 
 }
@@ -96,7 +96,7 @@ main {
     position: relative;
     margin: 1px;
     padding: 0;
-    background-image: url(../../static/images/tag_15.svg);
+    background-image: url(../../images/tag_15.svg);
     background-size: contain;
     background-repeat: no-repeat;
     /*width: 10%;*/
