--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Tving홈페이지</title>
-    <link rel="stylesheet" href="../../static/CSS/onboarding.css">
+    <link rel="stylesheet" href="../static/CSS/home.css" th:href="@{/css/home.css}">
 </head>
 <body>
 <header>
     <div id="title-con">
-        <a href="/">
-            <img src="../../static/images/tving-new-logo-pc.svg" alt="TVING">
+        <a th:href="@{/}">
+            <img src="../../static/images/tving-new-logo-pc.svg" th:src="@{IMAGES}" alt="TVING">
         </a>
     </div>
 </header>
@@ -23,7 +24,7 @@
                 <p class="message2">간편하게 가입하고, 원하실 때 해지할 수 있어요.</p>
                 <div id="btn-con">
                     <button type="button" >
-                        <img src="../../static/images/img_tving-symbol.svg" width="20%" alt="icon">
+                        <img src="../static/images/img_tving-symbol.svg" th:src="@{/images/img_tving-symbol.svg}" width="20%" alt="icon">
                         <p>새로워진 티빙을 만나보세요!</p>
                     </button>
                 </div>
