--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>티빙회원가입</title>
-    <link rel="stylesheet" href="../../../static/CSS/register/tving.css">
+    <link rel="stylesheet" href="../../static/CSS/user/register.css" th:href="@{CSS/user/register.css}" >
+    <script th:src="@{/JS/user/register.js}" defer></script>
 </head>
 <body>
     <header>
         <div id="title-con">
-            <a href="/">
-                <img src="../../../static/images/tving-new-logo-pc.svg" alt="TVING">
+            <a th:href="@{/}">
+                <img src="../../static/images/tving-new-logo-pc.svg" th:src="@{images/tving-new-logo-pc.svg}" alt="TVING">
             </a>
         </div>
     </header>
@@ -22,7 +24,7 @@
                     <h4 class="message2">아이디와 이메일로 간편하게 티빙을 시작하세요!</h4>
                 </div>
                 <!-- 입력 폼 구간 -->
-                <form>
+                <form name="register-form">
                     <div id="register-input-con">
                         <div>
                             <input class="register-input" type="text" placeholder="아이디">
@@ -42,7 +44,7 @@
                     <ul id="all-agree">
                         <li>
                             <label style="display: flex" >
-                                <img src="../../../static/images/agree-icon.png" class="agreeImg" alt="모두 동의함 버튼">
+                                <img src="../../static/images/agree-icon.png" class="agreeImg" th:src="@{IMAGES}" alt="모두 동의함 버튼">
                                 <h5>모두 동의합니다.</h5>
                             </label>
                         </li>
